<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Calendar Notifications</string>
    <string name="app_name_cnlight">CN Light</string>
    <string name="main_activity_title">Calendar Notifications</string>
    <string name="settings">Settings</string>
    <string name="application_has_no_access">This application needs special permissions to be able to access calendar notifications\n\nPlease grant READ_CALENDAR and WRITE_CALENDAR permissions\n\nWRITE_CALENDAR is required to hide original calendar notification</string>
    <string name="cancel">Cancel</string>
    <string name="empty" translatable="false" />
    <string name="dismiss">Dismiss</string>
    <string name="dismiss_event">Dismiss event</string>
    <string name="snooze">Snooze</string>
    <string name="empty_title">(No title)</string>
    <string name="snooze_event_for">Snooze:</string>
    <string name="snooze_preset_15_min">15 minutes</string>
    <string name="snooze_preset_1_hour">1 hour</string>
    <string name="snooze_preset_4_hours">4 hours</string>
    <string name="snooze_preset_1_day">1 day</string>
    <string name="location">Location:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="change_event_time">Move:</string>
    <string name="change_event_time_repeating_event">Move instance:</string>
    <string name="one_hour_from_now">Move next hour</string>
    <string name="same_time_tomorrow">Move next day</string>
    <string name="next_week_same_day">Move next week</string>
    <string name="move_four_weeks">Move by 4 weeks</string>
    <string name="title_activity_activity_test_buttons_and_to_do" translatable="false">ActivityTestButtonsAndToDo</string>
    <string name="snoozed_until_string">Snoozed until </string>
    <string name="card_view_btn_change">CHANGE</string>
    <string name="card_view_btn_snooze">SNOOZE</string>
    <string name="settings_name">Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="snooze_presets">Snooze settings</string>
    <string name="error_cannot_parse_preset">Sorry, cannot parse your input</string>
    <string name="snooze_presets_title">Snooze Presets</string>
    <string name="snooze_presets_summary">Here you can change default snooze presets</string>
    <string name="error_too_many_presets">Only up to 6 presets are supported, extra presets would be ignored</string>
    <string name="now">now</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="hours">hours</string>
    <string name="hour">hour</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="seconds">seconds</string>
    <string name="second">second</string>
    <string name="no_events_to_display">No event notifications to display\nActive and snoozed notifications would appear here</string>
    <string name="no_calendar_permissions_main">Application has no calendar permissions</string>
    <string name="view_after_edit">View after edit</string>
    <string name="view_after_edit_summary">Enable to automatically view event in the calendar after changing event time using Snooze activity</string>
    <string name="misc_settings">Misc settings</string>
    <string name="enable_reminders">Enable reminders</string>
    <string name="enable_reminders_summary">If enabled, app would repeatedly remind about active notifications</string>
    <string name="remind_interval">Remind interval</string>
    <string name="invalid_reminder_interval">Reminder interval cannot be zero, reverted to 1 minute</string>
    <string name="max_reminders">Max reminders</string>
    <string name="max_reminders_summary">Maximum number of reminders to fire, 0 for indefinite</string>
    <string name="projectPageOnGitHub">Project page on GitHub</string>
    <string name="snooze_all">Snooze All</string>
    <string name="change_all">Change All</string>
    <string name="snooze_all_confirmation">Snooze ALL events?\nAlready snoozed would also change snooze time unless snoozed to longer period</string>
    <string name="change_all_notification">This will change snooze time for all events\nContinue?</string>
    <string name="snooze_all_events">Snooze all events to:</string>
    <string name="change_all_events">Change snooze time for all events:</string>
    <string name="change_snooze_to">Change snooze to:</string>
    <string name="snooze_all_title">Snooze all events</string>
    <string name="change_all_title">Change all events</string>
    <string name="error_cannot_parse_pattern">Cannot parse this pattern</string>
    <string name="quiet_time_from">Quiet time from</string>
    <string name="quiet_time_to">Quiet time to</string>
    <string name="enable_quiet_time">Enable quiet time</string>
    <string name="quiet_hours_section">Quiet hours settings</string>
    <string name="snoozed_time_inside_quiet_hours" formatted="false">NOTE: Next snooze reminder hits quiet time period, no sound or vibration would be played until end of period on %s</string>
    <string name="quiet_hours_summary">Use quiet time to mute all reminders and snoozed event during certain period of time, primary events notifications would still play sound and vibrate (according to settings)</string>
    <string name="quiet_hours_main_activity_status" formatted="false">Quiet hours period is active\nNo reminders until %s</string>
    <string name="hits_quiet_period">(hits quiet period)</string>
    <string name="for_a_custom_time">For a custom period</string>
    <string name="until_specific_time">Until specific time and date</string>
    <string name="snooze_for">Snooze for:</string>
    <string name="selected_time_is_in_the_past"><b>Can\'t snooze:</b><br>selected time is in the past</br></string>
    <string-array name="time_units_plurals">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>
    <string-array name="time_units_plurals_with_seconds">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>
    <string name="title_calendars_activity">Handled Calendars</string>
    <string name="dialog_snooze_text_label_v2">Comma-separated list of snooze-presets is expected\n\nSupported values like \'15m\', \'2h\' or \'3d\' as well as negative values like \'-5m\' ("5 minutes before event")\n\nUp to 6 items in the list\n\nLeave the empty string to use defaults</string>
    <string name="before_event">before</string>
    <string name="menu_about">About</string>
    <string name="gplv3_notice">This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</string>
    <string name="gplv3_src_comment">\nFull text of GPLv3 license as well as full source code for this program can be found on the:</string>
    <string name="undo">UNDO</string>
    <string name="event_dismissed">Event dismissed</string>
    <string name="moved_to_string">Event rescheduled to</string>
    <string name="snoozed_until_example">Snoozed until 15:15</string>
    <string name="event_title_example">Event title</string>
    <string name="event_time_example">Wednesday, 31 December</string>
    <string name="ok">OK</string>
    <string name="hyphen" translatable="false">—</string>
    <string name="no_calendars_found">No calendars found</string>
    <string name="dismissed">Dismissed</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time" formatted="false">Snoozing until %s\nChoose Time</string>
    <string name="next">Next</string>
    <string name="until_event_time">Until event time</string>
    <string name="multiple_events_single_notification" formatted="false">%d calendar events</string>
    <string name="reminder_at" formatted="false"> (reminder at %s)</string>
    <string name="dismissed_events">Dismissed events</string>
    <string name="deleted_events">Bin</string>
    <string name="app_behavior">Behavior</string>
    <string name="dismissed_from_the_app" formatted="false">Dismissed from the app on %s</string>
    <string name="dismissed_from_notification" formatted="false">Dismissed via notification %s</string>
    <string name="event_moved_new_time" formatted="false">Moved, new time: %s</string>
    <string name="restore">Restore notification</string>
    <string name="swipe_to_delete">Swipe to delete from history</string>
    <string name="remove_all">Remove all</string>
    <string name="remove_all_confirmation">Remove all entries?</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="context_policy">
PRIVACY POLICY\n
\n
In order to operate, this app would receive and keep locally the information about calendar events fired by the Android Calendar\n
\n
Any details are stored completely within the app and deleted forever once app is uninstalled
\n
This app does not transmit or share any of your personal data to/with anyone\n
\n
If you create a new calendar event using this app or update the existing one, event would be synced by your device according to your device sync settings\n
    </string>
    <string name="use_set_alarm_clock_title">Use setAlarmClock for reminders</string>
    <string name="use_set_alarm_clock_summary">Marshmallow and above only!\nThis would trigger app to use setAlarmClock API call when scheduling reminders and snoozed events\nThis would increase reminders time accuracy\nAs a side effect, user would see \'alarm\' icon on UI when there are snoozed events or active reminders</string>
    <string name="build_time_string_format" formatted="false">Build time: %s</string>
    <string name="dismiss_all_events">Dismiss all events</string>
    <string name="dismiss_all_events_confirmation">Dismiss all events?\n\nCANNOT BE UNDONE!\n\nSnoozed events would not be removed</string>
    <string name="handle_events_with_no_reminders">Handle events with no reminders</string>
    <string name="handle_events_with_no_reminders_summary">Notify about events with no reminder added</string>
    <string name="default_reminder_time">Default reminder time</string>
    <string name="default_reminder_time_summary_short">Reminder time for events with no reminders</string>
    <string name="default_all_day_reminder_time">Default all day reminder</string>
    <string name="default_all_day_reminder_time_summary_short">Default reminder time for all day events with no reminders</string>
    <string name="special_event_title">Warning: due events skipped</string>
    <string name="special_event_detail_format" formatted="false">Only %d of %d due events displayed</string>
    <string name="special_event_detail2" formatted="false">Your device was switched off for long</string>
    <string name="ignore_declined_events">Ignore Declined events</string>
    <string name="ignore_declined_events_summary">Events that you have declined</string>
    <string name="ignore_cancelled_events">Ignore Cancelled events</string>
    <string name="ignore_cancelled_events_summary">Events that were cancelled by the organizer</string>
    <string name="first_day_of_week">First day of the week</string>
    <string name="first_day_of_week_summary">(Android 5 and above only)</string>
    <string name="use_alarm_stream">Use Alarm volume</string>
    <string name="calendar_was_changed_pull_down_to_refresh">Calendar has changed, pull down to refresh</string>
</resources>