<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_snooze_all"
        android:orderInCategory="90"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_update_white_24dp"
        android:title="@string/snooze_all" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="180"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"/>


    <item
        android:id="@+id/action_about"
        android:orderInCategory="220"
        app:showAsAction="never"
        android:title="@string/menu_about" />

    <item
        android:id="@+id/action_test_page"
        android:orderInCategory="10000"
        app:showAsAction="never"
        android:title="Dev page"
        android:visible="false"
        />
</menu>