<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity" >

    <item
        android:id="@+id/action_snooze_all"
        android:orderInCategory="90"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_update_white_24dp"
        android:title="@string/snooze_all" />

    <item
        android:id="@+id/action_finished_events"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/finished_events" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="180"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"/>


    <item
        android:id="@+id/action_about"
        android:orderInCategory="220"
        app:showAsAction="never"
        android:title="@string/menu_about" />

    <item
        android:id="@+id/action_test_page"
        android:orderInCategory="10000"
        app:showAsAction="never"
        android:title="Dev page"
        tools:ignore="HardcodedText"
        android:visible="false"
        />
</menu>
