<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_bottom_indicators"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_main_reload_layout"
            android:visibility="gone"
            android:elevation="4dp"
            tools:targetApi="m"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calendar_was_changed_pull_down_to_refresh"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/primary_text"
                android:gravity="start"
                android:paddingTop="@dimen/activity_main_text_pading_top"
                android:paddingBottom="@dimen/activity_main_text_pading_bottom"
                android:paddingStart="@dimen/activity_main_text_pading_start"
                android:paddingEnd="@dimen/activity_main_text_pading_end"
                android:background="?android:attr/selectableItemBackground"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/nearly_black"
            android:elevation="4dp"
            tools:targetApi="m"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undo"
                android:id="@+id/activity_main_button_undo"
                android:visibility="visible"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/accent"
                android:paddingStart="@dimen/activity_main_action_buttons_start_padding"
                android:paddingLeft="@dimen/activity_main_action_buttons_start_padding"
                android:paddingEnd="@dimen/activity_main_action_buttons_end_padding"
                android:paddingRight="@dimen/activity_main_action_buttons_end_padding"
                android:paddingTop="@dimen/activity_main_action_buttons_top_padding"
                android:paddingBottom="@dimen/activity_main_action_buttons_bottom_padding"
                android:background="?android:attr/selectableItemBackground"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="onUndoButtonClick"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_dismissed"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/icons"
                android:gravity="left"
                android:paddingTop="@dimen/activity_main_text_pading_top"
                android:paddingBottom="@dimen/activity_main_text_pading_bottom"
                android:paddingStart="@dimen/activity_main_text_pading_start"
                android:paddingEnd="@dimen/activity_main_text_pading_end"
                android:paddingRight="@dimen/activity_main_text_pading_end"
                android:paddingLeft="@dimen/activity_main_text_pading_start"
                android:background="?android:attr/selectableItemBackground"
                android:layout_toStartOf="@id/activity_main_button_undo"
                android:layout_toLeftOf="@id/activity_main_button_undo"
                />

        </RelativeLayout>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/cardview_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/activity_main_bottom_indicators">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_events"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/true_black_as_night"
            />

    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/secondary_text"
        android:text="@string/no_events_to_display"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/secondary_text"
        android:text="@string/no_calendar_permissions_main" />

</RelativeLayout>
